--- a/package.json
+++ b/package.json
@@ -9,7 +9,12 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "axios": "^0.18.0",
     "express": "^4.16.3",
+    "firebase-admin": "^5.13.0",
     "socket.io": "^2.1.1"
+  },
+  "devDependencies": {
+    "eslint": "^5.1.0"
   }
 }
